syntax = "proto3";

package hero;

service HelloService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}

service HeroService {
  rpc GetHero(GetHeroRequest) returns (GetHeroResponse) {}
  rpc CreateHero (CreateHeroRequest) returns (CreateHeroResponse);
  rpc UpdateHero (UpdateHeroRequest) returns (UpdateHeroResponse);
  rpc DeleteHero (DeleteHeroRequest) returns (DeleteHeroResponse);
}

message Hero {
  string name = 1;
  int32 hp = 2;
  int32 power = 3;
  int32 id = 4;
}

message GetHeroRequest {
  string name = 1;
  int32 id = 2;
}

message GetHeroResponse {
  repeated Hero hero = 1;
}

message CreateHeroRequest {
  string name = 1;
  int32 power = 2;
}

message CreateHeroResponse {
  Hero hero = 1;
}

message UpdateHeroRequest {
  string name = 1;
  int32 hp = 2;
  int32 power = 3;
  int32 id = 4;
}

message UpdateHeroResponse {
  Hero hero = 1;
}

message DeleteHeroRequest {
  string name = 1;
  int32 id = 2;
}

message DeleteHeroResponse {
  Hero hero = 1;
}