syntax = "proto3";

package hero.v1alpha;

service HeroService {
  rpc Hello(HelloRequest) returns (HelloReply) {}
  rpc CreateHero(CreateHeroRequest) returns (CreateHeroResponse);
  rpc FetchHero(FetchHeroRequest) returns (FetchHeroResponse);
  rpc AttackHero(AttackHeroRequest) returns (AttackHeroResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message Hero {
  int32 id = 1;
  string name = 2;
  int32 power = 3;
  int32 hp = 4;
}

message CreateHeroRequest {
  string name = 1;
  int32 power = 2;
}

message CreateHeroResponse {
  Hero hero = 1;
}

message FetchHeroRequest {
  int32 id = 1;
}

message FetchHeroResponse {
  repeated Hero heroes = 1;
}

message AttackHeroRequest {
  int32 attacking_id = 1;
  int32 defending_id = 2;
}

message AttackHeroResponse {
  Hero attacking_hero = 1;
  Hero defending_hero = 2;
}
